[metadata]
name = tbmalt
version = 0.0.0
description = Tight Binding Machine Learning Toolkit
long_description = file: README.rst
long_description_content_type = text/x-rst
license = LGPL-3.0-or-later
license_files =
    COPYING
    COPYING.LESSER

[options]
packages = find:
install_requires =
    numpy==1.24
    scipy
    torch==1.12
    dscribe
    h5py
    ase
    Cython
    pytest
python_requires = >=3.8

